arreglo de contenido

--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,28 @@
         <maven.compiler.target>24</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
+    <dependencies>
+        <!-- Dependencia para el driver de PostgreSQL-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.1</version>
+        </dependency>
+
+
+        <!-- Dependencia para HikariCP, el pool de conexiones -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.1.0</version> <!-- Usando la última versión estable -->
+        </dependency>
+
+    </dependencies>
 </project>
+
+
+
+
+
+
